--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,17 +1,21 @@
 body {
+  height: 100%;
+  width: 100%;
   background-image: url("/src/img/background.jpg");
   font: 20px sans-serif;
-  padding-top: 75px;
+  padding-top: 35px;
 }
+
 main {
   h1 {
     color: #2c3a47;
     text-align: center;
     font-size: 50px;
     font-weight: bold;
-    margin-bottom: 55px;
+    margin-bottom: 35px;
   }
 }
+
 .cards {
   width: 1200px;
   height: 900px;
@@ -32,8 +36,9 @@ article {
   row-gap: 10px;
 }
 
-.card-title {
+.card-name {
   text-align: center;
+  height: 25px;
   background-color: #00b894;
   color: #fff;
   padding: 10px;
@@ -59,17 +64,18 @@ btn-update {
   border-radius: 5px;
 }
 
-
-
 .btn-back {
-  margin: 0;
+  margin-left: 14%;
+  text-align: center;
+  display: flex;
+  margin-top: 350px;
+  margin-bottom: 20px;
   padding: 10px;
   opacity: 0.9;
 }
 
 btn-add {
-  display: flex;
-  margin-left: 43%;
+  margin-left: 20%;
   width: 250px;
   background-color: #1dd1a1;
   color: #fff;
@@ -78,13 +84,10 @@ btn-add {
 }
 
 btn-delete {
-  display: flex;
-  margin-top: 10px;
-  margin-left: 43%;
+  margin-left: 120px;
   width: 250px;
   background-color: #ff6b6b;
   color: #fff;
   padding: 20px;
   border-radius: 5px;
 }
-
