--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 body {
+  grid-template-columns: 1fr 1fr 1fr;
   height: 100%;
   width: 100%;
   background-image: url("/src/img/background.jpg");
@@ -7,6 +8,12 @@ body {
 }
 
 main {
+  display: grid;
+  margin-top: 100px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+header {
   h1 {
     color: #2c3a47;
     text-align: center;
@@ -17,43 +24,46 @@ main {
 }
 
 .cards {
-  width: 1200px;
-  height: 900px;
-  padding: 0.5em;
   margin: 0 auto;
-  display: grid;
-  gap: 20px;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-article {
-  display: grid;
-  padding: 10px;
-  margin: 0 10px;
-  background-color: #2c3a47;
-  opacity: 0.8;
-  grid-template-rows: auto 1fr auto;
-  row-gap: 10px;
 }
 
 .card-name {
+  font-weight: bold;
+  width: 230px;
   text-align: center;
   height: 25px;
   background-color: #00b894;
   color: #fff;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 10px 10px 0 0px;
 }
 
 .card-img {
   background-color: rgba(255, 255, 255, 0.8);
-  height: 300px;
+  height: 250px;
+}
+
+.card-short-desc {
+  color: #0a3d62;
+  text-align: center;
+  font-weight: bold;
+  width: 230px;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 10px;
+  height: auto;
+  border-radius: 0 0 10px 10px;
 }
 
 .card-desc {
+  color: #0a3d62;
+  text-align: center;
+  font-weight: bold;
+  width: 230px;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 10px;
-  height: 130px;
+  height: auto;
+  border-radius: 0 0 10px 10px;
+  visibility: hidden;
 }
 
 btn-update {
