--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,6 +22,7 @@ header h1 {
 }
 
 .cards {
+  padding: 20px;
   margin: 0 auto;
 }
 
@@ -72,20 +73,9 @@ btn-update {
   border-radius: 5px;
 }
 
-.btn-back {
-  margin-left: 14%;
+.btn-add {
   text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 350px;
-  margin-bottom: 20px;
-  padding: 10px;
-  opacity: 0.9;
-}
-
-btn-add {
-  margin-left: 20%;
+  margin-left: 60%;
   width: 250px;
   background-color: #1dd1a1;
   color: #fff;
@@ -93,8 +83,9 @@ btn-add {
   border-radius: 5px;
 }
 
-btn-delete {
-  margin-left: 120px;
+.btn-delete {
+  text-align: center;
+  margin-left: 20%;
   width: 250px;
   background-color: #ff6b6b;
   color: #fff;
