--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,5 @@
 body {
+  background-attachment: fixed;
   grid-template-columns: 1fr 1fr 1fr;
   height: 100%;
   width: 100%;
@@ -27,10 +28,11 @@ header h1 {
 }
 
 .card-name {
+  vertical-align: middle;
   font-weight: bold;
   width: 230px;
   text-align: center;
-  height: 25px;
+  height: auto;
   background-color: #00b894;
   color: #fff;
   padding: 10px;
@@ -66,6 +68,16 @@ header h1 {
 }
 
 .btn-add {
+  margin-top: 15px;
+  text-align: center;
+  width: 210px;
+  background-color: #1dd1a1;
+  color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.btn-submit {
   margin-top: 15px;
   text-align: center;
   width: 210px;
