--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 body {
+  background-attachment: fixed;
   grid-template-columns: 1fr 1fr 1fr;
   height: 100%;
   width: 100%;
@@ -29,10 +30,11 @@ header {
 }
 
 .card-name {
+  vertical-align: middle;
   font-weight: bold;
   width: 230px;
   text-align: center;
-  height: 25px;
+  height: auto;
   background-color: #00b894;
   color: #fff;
   padding: 10px;
@@ -69,6 +71,16 @@ header {
 }
 
 .btn-add {
+  margin-top: 15px;
+  text-align: center;
+  width: 210px;
+  background-color: #1dd1a1;
+  color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.btn-submit {
   margin-top: 15px;
   text-align: center;
   width: 210px;
