--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,6 +22,17 @@ header h1 {
   margin-bottom: 35px;
 }
 
+input {
+  border: 1px solid #2c3a47;
+  border-radius: 5px;
+  padding: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 10px;
+  width: auto;
+}
+
 .cards {
   padding: 20px;
   margin: 0 auto;
